--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,62 @@ body {
   line-height: 16px;
   color: #373A39;
 }
+
+.pricing {
+  background-color: #F6F8FA;
+  padding: 135px 164px;
+}
+
+.pricing__title {
+  margin-bottom: 90px;
+}
+
+.pricing__items {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul.pricing__item {
+  background-color: #fff;
+  text-align: center;
+  padding: 24px 25px 50px;
+  width: 370px;
+}
+
+.pricing__item li {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 22px;
+  color: #242121;
+  margin-bottom: 30px;
+}
+
+.pricing__item .pricing__item-name {
+  font-weight: bold;
+  text-align-last: left;
+  margin-bottom: 8px;
+}
+
+.pricing__item .pricing__item-num {
+  font-size: 80px;
+  line-height: 109px;
+  margin-bottom: 50px;
+}
+
+.pricing__item .pricing__item-num sup{
+  font-size: 40px;
+  line-height: 54px;
+}
+
+.pricing__item .pricing__item-plan {
+  display: block;
+  margin-top: 69px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1.2px;
+  color: #242121;
+}
