--- a/css/style.css
+++ b/css/style.css
@@ -609,3 +609,72 @@ ul.pricing__item {
   letter-spacing: 1.2px;
   color: #242121;
 }
+
+.clients {
+  padding: 70px 0 95px;
+}
+
+.clients__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact {
+  padding: 145px 0 15px;
+  background-image: url("../images/map.jpg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 40%;
+
+}
+
+.contact__title {
+  margin-bottom: 80px;
+}
+
+.form {
+  max-width: 570px;
+}
+
+.form input,
+.form textarea {
+  border: none;
+  border-bottom: 2px solid #373A39;
+  display: block;
+  width: 100%;
+  padding: 16px 0;
+  margin-bottom: 16px;
+  font-size: 14px;
+}
+
+.form input::placeholder,
+.form textarea::placeholder {
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 3.70909px;
+  color: #B8B8B8;
+  text-transform: uppercase;
+}
+
+.form textarea {
+  min-height: 140px;
+  resize: none;
+  margin-bottom: 40px;
+}
+
+.form button {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 11px;
+  line-height: 13px;
+  letter-spacing: 2px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  padding: 17px 70px 15px;
+  border: none;
+  background-color: #242121;
+  margin-bottom: 162px;
+  cursor: pointer;
+}
