--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ body {
   display: flex; 
 }
 
+.menu__btn {
+  display: none;
+}
+
 .menu__list-item + .menu__list-item {
   margin-left: 32px;
 }
@@ -738,3 +742,95 @@ ul.footer__social {
   color: #CCCCCC;
   background-color: #2A2C2B;
 }
+
+
+
+@media (max-width: 768px) {
+  .menu__list {
+    /* display: none; */
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: block;
+    text-align: center;
+    background-color: #000000;
+    transform: translateY(-200%);
+    transition: all .5s;
+  }
+
+  ul.menu__list {
+    padding: 90px 0 15px;
+  }
+
+  .menu__list-item + .menu__list-item {
+    margin-left: 0;
+  }
+
+  .menu__list-link {
+    display: block;
+    padding: 15px 0;
+    color: #fff;
+  }
+
+  .header__top-inner path,
+  .header__top-inner rect {
+    transition: all .5s;
+  }
+
+  .header__top-inner.header__top-inner--active .menu__list{
+    transform: translateY(0%);
+  }
+
+  .header__top-inner.header__top-inner--active path {
+    fill: #fff;
+  }
+
+  .header__top-inner.header__top-inner--active .menu__btn rect {
+    fill: #fff;
+  }
+
+  .header__top-inner {
+    align-items: center;
+  }
+  
+  .logo {
+    position: relative;
+    z-index: 2;
+  }
+
+  .menu__btn {
+    display: block;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin-top: 30px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .header__title {
+    font-size: 50px;
+    line-height: 65px;
+    margin-bottom: 10px;
+  }
+
+  .header__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+@media (max-width: 440px) {
+  .header__title {
+    font-size: 36px;
+    line-height: 44px;
+  }
+
+  .header__subtitle {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+
+@media (max-width: 768px) {}
